added api endpoints with authentication
