# api.yaml
@@ -2,24 +2,28 @@ openapi: 3.0.3
 info:
   title: Jstl.ink API
   description: |-
-    Jstl.ink description
+    Jstl.ink gives users the ability to easily create simple pages containing for 
+    them relevant links and their social media profiles
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 0.1.0
+
 servers:
   - url: localhost:8080
   - url: https://jstl.ink
+
 tags:
-  - name: pages
+  - name: page
     description: Everything about jstlink pages
   - name: creator
-    description: Everything about the creator site to edit pages
+    description: Everything about the creator page to create & edit pages
+
 paths:
   /{pageId}:
     get:
       tags:
-        - pages
+        - page
       summary: Get page by pageId
       description: Returns a single page
       operationId: getPageById
@@ -27,31 +31,79 @@ paths:
         - $ref: '#/components/parameters/PageId'
       responses:
         '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: string
-            application/xml:
-              schema:
-                type: string
+          $ref: '#/components/responses/PageResponse'
         '404':
           description: Page not found
-  /{pageId}/edit:
+
+  /creator:
+    post:
+      tags:
+        - creator
+      summary: Create new user page
+      operationId: createPage
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          $ref: '#/components/responses/PageResponse'
+      security:
+        - bearerAuth: [ ]
+
+  /creator/{pageId}:
     get:
       tags:
         - creator
-      summary: Get the creator site
-      description: ''
+      summary: Get the creator page
       operationId: getCreatorPageById
+      parameters:
+        - $ref: '#/components/parameters/PageId'
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          $ref: '#/components/responses/PageResponse'
+      security:
+        - bearerAuth: [ ]
+    post:
+      tags:
+        - creator
+      summary: Create new link on the user page
+      operationId: createLinkByPageId
+      parameters:
+        - $ref: '#/components/parameters/PageId'
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          $ref: '#/components/responses/LinkResponse'
+      security:
+        - bearerAuth: [ ]
+    delete:
+      tags:
+        - creator
+      summary: Delete a user page
+      operationId: deletePageByPageId
+      parameters:
+        - $ref: '#/components/parameters/PageId'
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          $ref: '#/components/responses/SuccessfulResponse'
+      security:
+        - bearerAuth: [ ]
+    put:
+      tags:
+        - creator
+      summary: Update a social link on user page
+      operationId: updateSocialLinkByPageId
       parameters:
         - $ref: '#/components/parameters/PageId'
       requestBody:
         content:
-          application/octet-stream:
+          application/json:
             schema:
-              type: string
-              format: binary
+              $ref: '#/components/schemas/SocialLink'
       responses:
         '401':
           $ref: '#/components/responses/UnauthorizedError'
@@ -60,40 +112,40 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/SocialLink'
       security:
-        - bearerAuth: []
-  /store/inventory:
+        - bearerAuth: [ ]
+    patch:
+      tags:
+        - creator
+      summary: Update a link on user page
+      operationId: updateLinkByPageId
+      parameters:
+        - $ref: '#/components/parameters/PageId'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Link'
+      responses:
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '200':
+          $ref: '#/components/responses/LinkResponse'
+      security:
+        - bearerAuth: [ ]
+
+  /creator/logout:
     get:
       tags:
-        - store
-      summary: Returns pet inventories by status
-      description: Returns a map of status codes to quantities
-      operationId: getInventory
+        - creator
+      summary: Logout user from creator page
+      operationId: logoutUser
+      parameters:
+        - $ref: '#/components/parameters/PageId'
       responses:
         '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                additionalProperties:
-                  type: integer
-                  format: int32
-      security:
-        - api_key: []
-
-  /user/logout:
-    get:
-      tags:
-        - user
-      summary: Logs out current logged in user session
-      description: ''
-      operationId: logoutUser
-      parameters: []
-      responses:
-        default:
-          description: successful operation
+          $ref: '#/components/responses/SuccessfulResponse'
 
 components:
   schemas:
@@ -104,9 +156,47 @@ components:
 
     Page:
       type: object
+      required:
+        - id
+        - name
       properties:
         id:
           $ref: '#/components/schemas/Id'
+        name:
+          description: username user page
+          type: string
+        bio:
+          description: biography for user page
+          type: string
+        img:
+          type: string
+          description: url for image
+        socialLinks:
+          type: array
+          description: links for social media profiles
+          items:
+            $ref: '#/components/schemas/SocialLink'
+        links:
+          type: array
+          description: custom definable links
+          items:
+            $ref: '#/components/schemas/Link'
+
+    Link:
+      type: object
+      required:
+        - name
+        - link
+      properties:
+        name:
+          description: alias for link
+          type: string
+        link:
+          description: url of a link
+          type: string
+
+    SocialLink:
+      $ref: '#/components/schemas/Link'
 
   #################
 
@@ -121,12 +211,32 @@ components:
 
   #################
 
-
-  #################
-
   responses:
     UnauthorizedError:
       description: Access token is missing or invalid
+
+    SuccessfulResponse:
+      description: successful operation
+
+    LinkResponse:
+      description: successful operation
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Link'#
+        application/xml:
+          schema:
+            $ref: '#/components/schemas/Link'
+
+    PageResponse:
+      description: successful operation
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Page'
+        application/xml:
+          schema:
+            $ref: '#/components/schemas/Page'
 
   #################
 
