# src/controllers/CreatorController.js
@@ -8,11 +8,41 @@
 
 const Controller = require('./Controller');
 const service = require('../services/CreatorService');
+const createLinkByPageId = async (request, response) => {
+  await Controller.handleRequest(request, response, service.createLinkByPageId);
+};
+
+const createPage = async (request, response) => {
+  await Controller.handleRequest(request, response, service.createPage);
+};
+
+const deletePageByPageId = async (request, response) => {
+  await Controller.handleRequest(request, response, service.deletePageByPageId);
+};
+
 const getCreatorPageById = async (request, response) => {
   await Controller.handleRequest(request, response, service.getCreatorPageById);
 };
 
+const logoutUser = async (request, response) => {
+  await Controller.handleRequest(request, response, service.logoutUser);
+};
+
+const updateLinkByPageId = async (request, response) => {
+  await Controller.handleRequest(request, response, service.updateLinkByPageId);
+};
+
+const updateSocialLinkByPageId = async (request, response) => {
+  await Controller.handleRequest(request, response, service.updateSocialLinkByPageId);
+};
+
 
 module.exports = {
+  createLinkByPageId,
+  createPage,
+  deletePageByPageId,
   getCreatorPageById,
+  logoutUser,
+  updateLinkByPageId,
+  updateSocialLinkByPageId,
 };
